# rust_samples

./: .gitignore  README.md
api_request/imagine/: Cargo.toml  README.md
api_request/imagine/src/: main.rs
aws/iam/audit_iam/: Cargo.toml  Notes.md
aws/iam/audit_iam/src/: lib.rs  main.rs
kai/: Cargo.toml
kai/samples/: demo-output.yaml
kai/src/: main.rs  yaml_parser.rs
llm/simple/: Cargo.toml
llm/simple/src/: main.rs
manning_fintech/: Cargo.toml  README.md
manning_fintech/src/: main.rs
wry/hello/: Cargo.toml
wry/hello/src/: main.rs
