[package]
name = "audit_iam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["log"] }
aws-config = "0.56.1"
aws-sdk-iam = "0.31.1"
aws-smithy-types = "0.56.1"
aws-types = "0.56.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tracing-subscriber = "0.3.17"
